federated-computation/dashboard/vault-admin-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: dashboard-vault-admin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - vault-admin.dashboard.fedcomp.eucaim.cancerimage.eu
      secretName: vault-admin.dashboard.fedcomp.eucaim.cancerimage.eu
  rules:
    - host: vault-admin.dashboard.fedcomp.eucaim.cancerimage.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-vault-admin
                port:
                  number: 8200
